--- a/README.me
+++ b/README.me
@@ -1,7 +1,12 @@
+Dependencies:
 
+install pyzmq via "pip install pyzmq"
 
-install pyzmq via:
-pip install pyzmq
+Run server.py
 
-run server.py
-run client.py
+Pass the number of random numbers requested in the form of a stringified int, such as:
+socket.send_string("10")
+
+Run client.py
+This will return a string that includes text and the 10 random numbers. An example: 
+Received reply 0 [ b'[4, 72, 15, 42, 72, 96, 9, 50, 40, 15]' ]
