--- a/README.me
+++ b/README.me
@@ -1,12 +1,21 @@
-Dependencies:
-
-install pyzmq via "pip install pyzmq"
-
-Run server.py
-
-Pass the number of random numbers requested in the form of a stringified int, such as:
-socket.send_string("10")
-
-Run client.py
-This will return a string that includes text and the 10 random numbers. An example: 
-Received reply 0 [ b'[4, 72, 15, 42, 72, 96, 9, 50, 40, 15]' ]
+Microservice for Bob
+******************************************
+Takes a stringified int and returns that number of random numbers as a stringified array. 
+******************************************
+#TODO:
+    -Add function challenges
+    -Authenticate received message
+******************************************
+How to Install:
+    Project is run locally.
+    Dependencies:
+    pyzmq (installed via "pip install pyzmq")
+******************************************
+How to Run:
+    Run server.py
+        Pass the number of random numbers requested in the form of a stringified int, such as:
+            socket.send_string("10")
+    Run client.py
+        This will return a string that includes text and the 10 random numbers. An example: 
+            Received reply 0 [ b'[4, 72, 15, 42, 72, 96, 9, 50, 40, 15]' ]
+******************************************
