Add png to README

--- a/README.me
+++ b/README.me
@@ -35,9 +35,4 @@ How to Run:
 # UML
 
 
-
-
-![alt text](http://url/to/img.png)
-
-
-![UML Sequence Diagram](./bob-microservce-uml.drawio.png)
+![UML Sequence Diagram](./bob-microservice-uml.drawio)
