--- a/README.me
+++ b/README.me
@@ -96,5 +96,10 @@ Install it via pip:
     pip install pyzmq
     ```
 
-License
+##License
 This project is licensed under the MIT License
+
+## References
+- [ZeroMQ Documentation](https://zeromq.org/documentation/) - Official documentation for ZeroMQ.
+- [Python `pyzmq` Library](https://pyzmq.readthedocs.io/en/latest/) - Python bindings for ZeroMQ.
+- [JSON Documentation](https://www.json.org/json-en.html) - Official JSON format documentation.
